--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -18,6 +18,7 @@ It must be used in conjunction with mat-panel.
 @dependency xp-master-state ExpandJS/xp-master-state
 
 @devDependency mat-demo ExpandJS/mat-demo
+@devDependency mat-icon-button ExpandJS/mat-icon-button
 @devDependency mat-item ExpandJS/mat-item
 @devDependency mat-toolbar ExpandJS/mat-toolbar
 -->
