--- a/mat-panel.html
+++ b/mat-panel.html
@@ -22,6 +22,7 @@ It can be used in conjunction with mat-panel-group.
 @dependency xp-slave-state ExpandJS/xp-slave-state
 
 @devDependency mat-demo ExpandJS/mat-demo
+@devDependency mat-icon-button ExpandJS/mat-icon-button
 @devDependency mat-item ExpandJS/mat-item
 @devDependency mat-toolbar ExpandJS/mat-toolbar
 -->
