--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -7,11 +7,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to group multiple panels.
+This element is used to group multiple panels.
 It must be used in conjunction with mat-panel.
 
-@component mat-panel-group
-@description This component is used to group multiple panels.
+@element mat-panel-group
+@description This element is used to group multiple panels.
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
@@ -42,7 +42,7 @@ It must be used in conjunction with mat-panel.
     </template>
 
     <script>
-        XPComponent({
+        XPElement({
 
             // PUBLISH
             publish: {
