--- a/mat-panel.html
+++ b/mat-panel.html
@@ -7,11 +7,11 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This component is used to display a material panel.
+This element is used to display a material panel.
 It can be used in conjunction with mat-panel-group.
 
-@component mat-panel
-@description This component is used to display a material panel.
+@element mat-panel
+@description This element is used to display a material panel.
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
@@ -76,7 +76,7 @@ It can be used in conjunction with mat-panel-group.
     </template>
 
     <script>
-        XPComponent({
+        XPElement({
 
             /**
              * Collapses the panel.
