--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -12,6 +12,8 @@ It must be used in conjunction with mat-panel.
 
 @element mat-panel-group
 @description This element is used to group multiple panels.
+@homepage http://www.expandjs.com/elements/mat-panel-group
+@demo http://www.expandjs.com/demo/mat-panel
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
