--- a/mat-panel.html
+++ b/mat-panel.html
@@ -12,6 +12,8 @@ It can be used in conjunction with mat-panel-group.
 
 @element mat-panel
 @description This element is used to display a material panel.
+@homepage http://www.expandjs.com/elements/mat-panel
+@demo http://www.expandjs.com/demo/mat-panel
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
