--- a/mat-panel.html
+++ b/mat-panel.html
@@ -51,13 +51,19 @@ It can be used in conjunction with mat-panel-group.
                 overflow: visible;
             }
 
-            :host #matPanelHeader,
-            :host #matPanelBody {
+            :host #matPanelBody,
+            :host #matPanelHeader, {
                 position: relative;
             }
 
             :host #matPanelHeader {
-                z-index: 10;
+                -ms-flex-order: 2;
+                order: 2;
+            }
+
+            :host #matPanelHeader {
+                -ms-flex-order: 1;
+                order: 1;
             }
 
             :host [scroller] {
@@ -65,14 +71,14 @@ It can be used in conjunction with mat-panel-group.
             }
         </style>
         <template context="{{}}" is="xp-slave-state" master="{{group}}" masterTag="mat-panel-group"></template>
-        <mat-paper id="matPanelWrapper" background="{{background}}" z="{{raised ? 1 : 0}}">
-            <div id="matPanelHeader">
-                <content id="headerContent" select="[header]"></content>
-            </div>
+        <mat-paper id="matPanelWrapper" background="{{background}}" z="{{raised ? 1 : 0}}" vertical layout>
             <div id="matPanelBody">
                 <xp-collapse context="{{}}" id="matPanelScroller" backward="{{true}}" collapsed="{{collapsed}}" easing="cubic-bezier(.55, 0, .01, 1)" locked="{{!collapsible}}" on-scroll="{{handleScroll}}">
-                    <content id="bodyContent"></content>
+                    <content id="bodyContent" select=":not([header])"></content>
                 </xp-collapse>
+            </div>
+            <div id="matPanelHeader">
+                <content id="headerContent" select="[header]"></content>
             </div>
         </mat-paper>
     </template>
