--- a/mat-panel.html
+++ b/mat-panel.html
@@ -1,6 +1,6 @@
 <!--
 @license
-Copyright (c) 2015 The expand.js authors. All rights reserved.
+Copyright (c) 2015 The ExpandJS authors. All rights reserved.
 This code may only be used under the BSD style license found at https://expandjs.github.io/LICENSE.txt
 The complete set of authors may be found at https://expandjs.github.io/AUTHORS.txt
 The complete set of contributors may be found at https://expandjs.github.io/CONTRIBUTORS.txt
@@ -11,7 +11,7 @@ This element is used to display a material panel.
 It can be used in conjunction with mat-panel-group.
 
 @element mat-panel
-@description This element is used to display a material panel.
+@description A custom element used to display a Material Design panel
 @homepage http://www.expandjs.com/elements/mat-panel
 @demo http://www.expandjs.com/demo/mat-panel
 
