--- a/mat-panel.html
+++ b/mat-panel.html
@@ -81,6 +81,20 @@ It can be used in conjunction with mat-panel-group.
         XPElement({
 
             /**
+             * Fired when the slave is attached.
+             *
+             * @event xp-slave
+             * @param {Element} firer
+             * @param {Element} slave
+             * @param {string} masterSelector
+             * @param {string} masterTag
+             * @param {boolean} isAttached
+             * @bubbles
+             */
+
+            /*********************************************************************/
+
+            /**
              * Collapses the panel.
              *
              * @method collapse
