--- a/demo-element.html
+++ b/demo-element.html
@@ -15,7 +15,7 @@
         </style>
         <mat-demo label="mat-panel">
 
-            <h1>Default</h1>
+            <div class="title">Default</div>
             <mat-panel raised>
                 <mat-toolbar background="indigo">
                     <mat-icon-button icon="navigation:menu"></mat-icon-button>
