--- a/mat-panel.html
+++ b/mat-panel.html
@@ -12,6 +12,7 @@ It can be used in conjunction with mat-panel-group.
 
 @element mat-panel
 @description A custom element used to display a Material Design panel
+@group containers
 @homepage http://www.expandjs.com/elements/mat-panel
 @demo http://www.expandjs.com/demo/mat-panel
 
