--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -12,6 +12,7 @@ It must be used in conjunction with mat-panel.
 
 @element mat-panel-group
 @description A custom element used to manage multiple Material Design panels as a group
+@group containers
 @homepage http://www.expandjs.com/elements/mat-panel-group
 @demo http://www.expandjs.com/demo/mat-panel
 
