--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -31,7 +31,7 @@ It must be used in conjunction with mat-panel.
 <link rel="import" href="../xp-master-state/xp-master-state.html">
 <link rel="import" href="mat-panel.html">
 
-<polymer-element name="mat-panel-group" constructor="MATPanelGroupElement" attributes="autoCollapseDisabled panels">
+<polymer-element name="mat-panel-group" attributes="autoCollapseDisabled panels">
 
     <template>
         <style>
