--- a/mat-panel.html
+++ b/mat-panel.html
@@ -38,7 +38,7 @@ It can be used in conjunction with mat-panel-group.
 <link rel="import" href="../xp-collapse/xp-collapse.html">
 <link rel="import" href="../xp-slave-state/xp-slave-state.html">
 
-<polymer-element name="mat-panel" constructor="MATPanelElement" attributes="background collapsed collapsible raised scrolled">
+<polymer-element name="mat-panel" attributes="background collapsed collapsible raised scrolled">
 
     <template>
         <style>
