--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -13,8 +13,8 @@ It must be used in conjunction with mat-panel.
 @element mat-panel-group
 @description A custom element used to manage multiple Material Design panels as a group
 @group containers
-@homepage http://www.expandjs.com/elements/mat-panel-group
-@demo http://www.expandjs.com/demo/mat-panel
+@homepage http://expandjs.com/elements/mat-panel-group
+@demo http://expandjs.com/demo/mat-panel
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
