--- a/mat-panel.html
+++ b/mat-panel.html
@@ -13,8 +13,8 @@ It can be used in conjunction with mat-panel-group.
 @element mat-panel
 @description A custom element used to display a Material Design panel
 @group containers
-@homepage http://www.expandjs.com/elements/mat-panel
-@demo http://www.expandjs.com/demo/mat-panel
+@homepage http://expandjs.com/elements/mat-panel
+@demo http://expandjs.com/demo/mat-panel
 
 @dependency polymer Polymer/polymer#^0.5
 @dependency expandjs ExpandJS/expandjs
