--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -12,7 +12,7 @@ It must be used in conjunction with mat-panel.
 
 @element mat-panel-group
 @description A custom element used to manage multiple Material Design panels as a group
-@keywords material design, material panel group, web app, html5, expandjs
+@keywords material design, material panel group, web app, html5, expandjs, web-components
 @group containers
 @homepage http://expandjs.com/elements/mat-panel-group
 @demo http://expandjs.com/demo/mat-panel
