--- a/mat-panel.html
+++ b/mat-panel.html
@@ -12,7 +12,7 @@ It can be used in conjunction with mat-panel-group.
 
 @element mat-panel
 @description A custom element used to display a Material Design panel
-@keywords material design, material panel, web app, html5, expandjs
+@keywords material design, material panel, web app, html5, expandjs, web-components
 @group containers
 @homepage http://expandjs.com/elements/mat-panel
 @demo http://expandjs.com/demo/mat-panel
