--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -48,6 +48,9 @@ It must be used in conjunction with mat-panel.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'mat-panel-group',
+
             // PUBLISH
             publish: {
 
