--- a/mat-panel.html
+++ b/mat-panel.html
@@ -78,6 +78,11 @@ It can be used in conjunction with mat-panel-group.
     <script>
         XPElement({
 
+            // ELEMENT
+            is: 'mat-panel',
+
+            /*********************************************************************/
+
             /**
              * Fired when the slave is attached.
              *
