--- a/mat-panel.html
+++ b/mat-panel.html
@@ -68,7 +68,7 @@ It can be used in conjunction with mat-panel-group.
                 <content id="headerContent" select="[header]"></content>
             </div>
             <div id="matPanelBody">
-                <xp-collapse context="{{}}" id="matPanelScroller" backward="{{true}}" collapsed="{{collapsed}}" easing="cubic-bezier(.55, 0, .01, 1)" locked="{{!collapsible}}" on-scroll="{{handleScroll}}">
+                <xp-collapse context="{{}}" id="matPanelScroller" backward="{{true}}" collapsed="{{collapsed}}" easing="cubic-bezier(0.55, 0, 0.01, 1)" locked="{{!collapsible}}" on-scroll="{{handleScroll}}">
                     <content id="bodyContent"></content>
                 </xp-collapse>
             </div>
