--- a/mat-panel.html
+++ b/mat-panel.html
@@ -17,18 +17,18 @@ It can be used in conjunction with mat-panel-group.
 @homepage http://expandjs.com/elements/mat-panel
 @demo http://expandjs.com/demo/mat-panel
 
-@dependency polymer Polymer/polymer
-@dependency expandjs ExpandJS/expandjs
-@dependency mat-menu-button ExpandJS/mat-menu-button
-@dependency mat-paper ExpandJS/mat-paper
-@dependency mat-toolbar ExpandJS/mat-toolbar
-@dependency xp-collapse ExpandJS/xp-collapse
-@dependency xp-slave-state ExpandJS/xp-slave-state
+@dependency polymer Polymer/polymer#^1.0.4
+@dependency expandjs ExpandJS/expandjs#0.9.1
+@dependency mat-menu-button ExpandJS/mat-menu-button#0.9.1
+@dependency mat-paper ExpandJS/mat-paper#0.9.1
+@dependency mat-toolbar ExpandJS/mat-toolbar#0.9.1
+@dependency xp-collapse ExpandJS/xp-collapse#0.9.1
+@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.1
 
-@devDependency mat-demo ExpandJS/mat-demo
-@devDependency mat-icon-button ExpandJS/mat-icon-button
-@devDependency mat-item ExpandJS/mat-item
-@devDependency mat-toolbar ExpandJS/mat-toolbar
+@devDependency mat-demo ExpandJS/mat-demo#0.9.1
+@devDependency mat-icon-button ExpandJS/mat-icon-button#0.9.1
+@devDependency mat-item ExpandJS/mat-item#0.9.1
+@devDependency mat-toolbar ExpandJS/mat-toolbar#0.9.1
 -->
 
 <link rel="import" href="../polymer/polymer.html">
@@ -63,7 +63,7 @@ It can be used in conjunction with mat-panel-group.
     </style>
 
     <template>
-        <xp-slave-state master="{{group}}" masterTag="mat-panel-group"></xp-slave-state>
+        <template is="xp-slave-state" master="{{group}}" master-tag="mat-panel-group"></template>
         <mat-paper id="matPanelWrapper" background="[[background]]" z="[[_computeZ(raised)]]">
             <div id="matPanelHeader">
                 <content id="headerContent" select="[header]"></content>
@@ -122,10 +122,38 @@ It can be used in conjunction with mat-panel-group.
 
             /*********************************************************************/
 
+            /**
+             * Refreshes the element.
+             *
+             * @method _refresh
+             * @returns {Element}
+             * @private
+             */
+            _refresh: function () {
+
+                // Vars
+                var self = this;
+
+                // Checking
+                if (!self.isAttached || !self.group) { return self; }
+
+                // Collapsing
+                if (!self.collapsed && !self.group.autoCollapseDisabled) { XP.invoke(XP.findSiblingElements(self, 'mat-panel'), 'collapse'); }
+
+                return self;
+            },
+
+            /*********************************************************************/
+
             // LISTENERS
             listeners: {
-                'xp-slave': '_handleSlave'
+                'xp-slave-state': '_handleSlave'
             },
+
+            // OBSERVERS
+            observers: [
+                '_refresh(collapsed, group)'
+            ],
 
             // PROPERTIES
             properties: {
@@ -152,7 +180,6 @@ It can be used in conjunction with mat-panel-group.
                  */
                 collapsed: {
                     notify: true,
-                    observer: '_collapsedChanged',
                     reflectToAttribute: true,
                     type: Boolean,
                     value: false
@@ -226,15 +253,12 @@ It can be used in conjunction with mat-panel-group.
             /*********************************************************************/
 
             // OBSERVER
-            _collapsedChanged: function (post) {
-                var self = this;
-                if (post || (self.group && self.group.autoCollapseDisabled)) { return; }
-                XP.invoke(XP.findSiblingElements(self, 'mat-panel'), 'collapse');
-            },
-
-            // OBSERVER
             _scrollerChanged: function (post, pre) {
+
+                // Checking
                 if (arguments.length < 2) { return; }
+
+                // Listening
                 if (pre) { XP.removeAttribute(pre, 'scroller'); }
                 if (post) { XP.addAttribute(post, 'scroller'); }
             },
