- Added xp-adapter-behavior - Added xp-form - Improved xp-request - Major bug fixes - Updated dependencies - Updated documentation

--- a/mat-panel.html
+++ b/mat-panel.html
@@ -8,6 +8,7 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 
 <!--
 This element is used to display a material panel.
+
 It can be used in conjunction with mat-panel-group.
 
 @element mat-panel
@@ -43,7 +44,8 @@ It can be used in conjunction with mat-panel-group.
         }
 
         :host #matPanelHeader,
-        :host #matPanelBody {
+        :host #matPanelBody,
+        :host #matPanelScroller {
             position: relative;
         }
 
