--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -7,9 +7,27 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This element is used to group multiple panels.
+An element used to group multiple [mat-panel](http://expandjs.com/elements/mat-panel).
 
-It must be used in conjunction with mat-panel.
+By default, the `<mat-panel-group>` will keep only one panel open at a time.
+
+```html
+<mat-panel-group>
+    <mat-panel>...</mat-panel>
+    <mat-panel>...</mat-panel>
+    <mat-panel>...</mat-panel>
+</mat-panel-group>
+```
+
+If you want to open multiple panels at once, you can use `auto-collapse-disabled`.
+
+```html
+<mat-panel-group auto-collapse-disabled>
+    <mat-panel>...</mat-panel>
+    <mat-panel>...</mat-panel>
+    <mat-panel>...</mat-panel>
+</mat-panel-group>
+```
 
 @element mat-panel-group
 @description A custom element used to manage multiple Material Design panels as a group
@@ -18,8 +36,8 @@ It must be used in conjunction with mat-panel.
 @homepage http://expandjs.com/elements/mat-panel-group
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.4
-@dependency xp-master-state ExpandJS/xp-master-state#0.9.4
+@dependency expandjs ExpandJS/expandjs#0.9.5
+@dependency xp-master-state ExpandJS/xp-master-state#0.9.5
 -->
 
 <link rel="import" href="../polymer/polymer.html">
