--- a/mat-panel.html
+++ b/mat-panel.html
@@ -7,9 +7,40 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 -->
 
 <!--
-This element is used to display a material panel.
 
-It can be used in conjunction with mat-panel-group.
+An element used to display a collapsible Material Design panel.
+
+```html
+<mat-panel>
+    <mat-toolbar>...</mat-toolbar>
+    <mat-content>...</mat-content>
+</mat-panel>
+```
+
+It can also be used in conjunction with [mat-panel-group](http://expandjs.com/elements/mat-panel),
+to create a series of collapsible panels and control their behavior.
+
+```html
+<mat-panel-group>
+    <mat-panel>...</mat-panel>
+    <mat-panel>...</mat-panel>
+    <mat-panel>...</mat-panel>
+</mat-panel-group>
+```
+
+---
+
+## Styling
+
+The panel's background color can be changed accordingly to the
+[Material Design palette](http://www.google.com/design/spec/style/color.html#color-color-palette).
+
+```html
+<mat-panel background="blue">
+    <mat-toolbar>...</mat-toolbar>
+    <mat-content>...</mat-content>
+</mat-panel>
+```
 
 @element mat-panel
 @description A custom element used to display a Material Design panel
@@ -18,12 +49,12 @@ It can be used in conjunction with mat-panel-group.
 @homepage http://expandjs.com/elements/mat-panel
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.4
-@dependency mat-menu-button ExpandJS/mat-menu-button#0.9.4
-@dependency mat-paper ExpandJS/mat-paper#0.9.4
-@dependency mat-toolbar ExpandJS/mat-toolbar#0.9.4
-@dependency xp-collapse ExpandJS/xp-collapse#0.9.4
-@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.4
+@dependency expandjs ExpandJS/expandjs#0.9.5
+@dependency mat-menu-button ExpandJS/mat-menu-button#0.9.5
+@dependency mat-paper ExpandJS/mat-paper#0.9.5
+@dependency mat-toolbar ExpandJS/mat-toolbar#0.9.5
+@dependency xp-collapse ExpandJS/xp-collapse#0.9.5
+@dependency xp-slave-state ExpandJS/xp-slave-state#0.9.5
 -->
 
 <link rel="import" href="../polymer/polymer.html">
