- Added mat-progress - Added mat-spinner - Improved xp-pressed-behavior - Major documentation improvements - Minor bug fixes - Moved multi selection from xp-selected-behavior to xp-multi-select-behavior

--- a/mat-panel-group.html
+++ b/mat-panel-group.html
@@ -34,6 +34,7 @@ If you want to open multiple panels at once, you can use `auto-collapse-disabled
 @keywords material design, material panel group, web app, html5, expandjs, web-components
 @group containers
 @homepage http://expandjs.com/elements/mat-panel-group
+@repository https://github.com/ExpandJS/mat-panel-group
 
 @dependency polymer Polymer/polymer#^1.0.0
 @dependency expandjs ExpandJS/expandjs#0.9.5
