--- a/mat-panel.html
+++ b/mat-panel.html
@@ -47,6 +47,7 @@ The panel's background color can be changed accordingly to the
 @keywords material design, material panel, web app, html5, expandjs, web-components
 @group containers
 @homepage http://expandjs.com/elements/mat-panel
+@repository https://github.com/ExpandJS/mat-panel
 
 @dependency polymer Polymer/polymer#^1.0.0
 @dependency expandjs ExpandJS/expandjs#0.9.5
