--- a/mat-panel.html
+++ b/mat-panel.html
@@ -8,16 +8,17 @@ The complete set of contributors may be found at https://expandjs.github.io/CONT
 
 <!--
 
-An element used to display a collapsible Material Design panel.
+A custom element used to display a [Material Design panel](https://www.google.com/design/spec/layout/structure.html#structure-toolbars).
 
 ```html
 <mat-panel>
     <mat-toolbar>...</mat-toolbar>
-    <mat-content>...</mat-content>
+    ...
 </mat-panel>
 ```
 
-It can also be used in conjunction with [mat-panel-group](http://expandjs.com/elements/mat-panel),
+It can be used in conjunction with
+[mat-panel-group](http://expandjs.com/elements/mat-panel),
 to create a series of collapsible panels and control their behavior.
 
 ```html
@@ -38,82 +39,79 @@ The panel's background color can be changed accordingly to the
 ```html
 <mat-panel background="blue">
     <mat-toolbar>...</mat-toolbar>
-    <mat-content>...</mat-content>
+    ...
 </mat-panel>
 ```
 
 @element mat-panel
 @description A custom element used to display a Material Design panel
-@keywords material design, material panel, web app, html5, expandjs, web-components
+@keywords material design, expandjs, web app, custom elements, web-components
 @group containers
+
 @homepage http://expandjs.com/elements/mat-panel
 @repository https://github.com/ExpandJS/mat-panel
 
+@behavior mat-paper-behavior /bower_components/mat-paper/mat-paper-behavior.html
+@behavior xp-collapse-behavior /bower_components/xp-collapse-behavior/xp-collapse-behavior.html
 @behavior xp-slave-behavior /bower_components/xp-slave-behavior/xp-slave-behavior.html
 
 @dependency polymer Polymer/polymer#^1.0.0
-@dependency expandjs ExpandJS/expandjs#0.9.11
-@dependency mat-paper ExpandJS/mat-paper#0.9.11
-@dependency mat-toolbar ExpandJS/mat-toolbar#0.9.11
-@dependency xp-collapse ExpandJS/xp-collapse#0.9.11
-@dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.9.11
+@dependency expandjs ExpandJS/expandjs#0.10.0
+@dependency mat-paper ExpandJS/mat-paper#0.10.0
+@dependency mat-spacing ExpandJS/mat-spacing#0.10.0
+@dependency xp-collapse ExpandJS/xp-collapse#0.10.0
+@dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.10.0
 -->
 
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../expandjs/expandjs.html">
-<link rel="import" href="../mat-paper/mat-paper.html">
-<link rel="import" href="../mat-toolbar/mat-toolbar.html">
-<link rel="import" href="../xp-collapse/xp-collapse.html">
+<link rel="import" href="../mat-paper/mat-paper-behavior.html">
+<link rel="import" href="../mat-paper/mat-paper-styles.html">
+<link rel="import" href="../mat-spacing/mat-spacing.html">
+<link rel="import" href="../xp-collapse-behavior/xp-collapse-behavior.html">
+<link rel="import" href="../xp-collapse-behavior/xp-collapse-styles.html">
 <link rel="import" href="../xp-slave-behavior/xp-slave-behavior.html">
 
 <dom-module id="mat-panel">
 
-    <template>
+    <template strip-whitespace>
+
+        <style include="mat-paper-styles"></style>
+        <style include="xp-collapse-styles"></style>
 
         <style>
-            :host {
-                display: block;
-                overflow: visible;
-                text-align: left;
-            }
-
-            :host #matPanelWrapper {
+            :host .wrapper {
                 @apply(--layout-vertical);
             }
 
-            :host #matPanelHeader,
-            :host #matPanelBody,
-            :host #matPanelScroller {
-                position: relative;
-            }
-
-            :host #matPanelHeader {
+            :host .header  {
                 -ms-flex-order: 1;
                 -webkit-order: 1;
                 order: 1;
+                position: relative;
             }
 
-            :host #matPanelBody {
+            :host .body {
                 -ms-flex-order: 2;
                 -webkit-order: 2;
                 order: 2;
+                overflow-x: hidden;
+                overflow-y: auto;
             }
 
-            :host [scroller] {
-                overflow-y: auto;
+            :host([padding]) .body {
+                @apply(--mat-padding-mobile);
             }
         </style>
 
-        <mat-paper id="matPanelWrapper" background="[[background]]" z="[[_computeZ(raised)]]">
-            <div id="matPanelBody">
-                <xp-collapse id="matPanelScroller" animatable="{{animatable}}" backward collapsed="{{collapsed}}" easing="cubic-bezier(0.55, 0, 0.01, 1)" on-scroll="_handleScroll">
-                    <content id="bodyContent" select=':not([header=""])'></content>
-                </xp-collapse>
+        <div class="wrapper">
+            <div class="collapsible body">
+                <content select=":not(.toolbar)"></content>
             </div>
-            <div id="matPanelHeader">
-                <content id="headerContent" select='[header=""]'></content>
+            <div class="header">
+                <content select=".toolbar"></content>
             </div>
-        </mat-paper>
+        </div>
 
     </template>
 
@@ -125,80 +123,10 @@ The panel's background color can be changed accordingly to the
 
             // BEHAVIORS
             behaviors: [
+                Polymer.MatPaperBehavior,
+                Polymer.XPCollapseBehavior,
                 Polymer.XPSlaveBehavior
             ],
-
-            /*********************************************************************/
-
-            /**
-             * Collapses the panel.
-             *
-             * @method collapse
-             * @returns {Element}
-             */
-            collapse: function () {
-                var self = this;
-                self.$.matPanelScroller.collapse();
-                return self;
-            },
-
-            /**
-             * Expands the panel.
-             *
-             * @method expand
-             * @returns {Element}
-             */
-            expand: function () {
-                var self = this;
-                self.$.matPanelScroller.expand();
-                return self;
-            },
-
-            /**
-             * Toggles the collapsed state.
-             *
-             * @method toggle
-             * @returns {Element}
-             */
-            toggle: function () {
-                var self = this;
-                self.$.matPanelScroller.toggle();
-                return self;
-            },
-
-            /*********************************************************************/
-
-            /**
-             * Refreshes the element.
-             *
-             * @method _refresh
-             * @returns {Element}
-             * @private
-             */
-            _refresh: function () {
-
-                // Vars
-                var self = this;
-
-                // Checking
-                if (!self.isAttached || !self.group) { return self; }
-
-                // Collapsing
-                if (!self.collapsed && !self.group.autoCollapseDisabled) { XP.invoke(XP.findSiblingElements(self, 'mat-panel'), 'collapse'); }
-
-                return self;
-            },
-
-            /**
-             * Returns the masters map.
-             *
-             * @method _setupMasters
-             * @returns {Object}
-             * @private
-             */
-            _setupMasters: function () {
-                return {group: 'mat-panel-group'};
-            },
 
             /*********************************************************************/
 
@@ -209,51 +137,35 @@ The panel's background color can be changed accordingly to the
 
             // OBSERVERS
             observers: [
-                '_refresh(collapsed, group)'
+                '_groupChanged(collapsed, group)'
             ],
 
             // PROPERTIES
             properties: {
 
                 /**
-                 * If set to true, the animation can be executed.
+                 * If set to true, the collapse animation will be a slide instead of a compress.
                  *
-                 * @attribute animatable
+                 * @attribute backward
                  * @type boolean
-                 * @default false
-                 * @notifies
+                 * @default true
                  */
-                animatable: {
-                    notify: true,
+                backward: {
+                    reflectToAttribute: true,
                     type: Boolean,
-                    value: false
+                    value: true
                 },
 
                 /**
-                 * The paper's background color.
+                 * The animation's easing.
                  *
-                 * @attribute background
+                 * @attribute easing
                  * @type string
+                 * @default "cubic-bezier(0.55, 0, 0.01, 1)"
                  */
-                background: {
-                    reflectToAttribute: true,
+                easing: {
                     type: String,
-                    value: null
-                },
-
-                /**
-                 * If set to true, the panel is collapsed.
-                 *
-                 * @attribute collapsed
-                 * @type boolean
-                 * @default false
-                 * @notifies
-                 */
-                collapsed: {
-                    notify: true,
-                    reflectToAttribute: true,
-                    type: Boolean,
-                    value: false
+                    value: 'cubic-bezier(0.55, 0, 0.01, 1)'
                 },
 
                 /**
@@ -266,94 +178,81 @@ The panel's background color can be changed accordingly to the
                  */
                 group: {
                     notify: true,
-                    readOnly: true,
-                    type: Object,
-                    value: null
+                    readOnly: true
                 },
 
                 /**
-                 * If set to true, the panel is raised.
+                 * If set to true, the material spacing rules are applied.
                  *
-                 * @attribute raised
+                 * @attribute padding
                  * @type boolean
                  * @default false
                  */
-                raised: {
+                padding: {
                     reflectToAttribute: true,
                     type: Boolean,
                     value: false
                 },
 
                 /**
-                 * The panel's scroll amount.
+                 * The panel's z-axis position.
                  *
-                 * @attribute scrolled
+                 * @attribute z
                  * @type number
-                 * @default 0
+                 * @default 2
                  * @notifies
-                 * @readonly
                  */
-                scrolled: {
+                z: {
                     notify: true,
-                    readOnly: true,
+                    reflectToAttribute: true,
                     type: Number,
-                    value: 0
-                },
-
-                /**
-                 * The panel's scrolling element.
-                 *
-                 * @attribute scroller
-                 * @type Element
-                 * @notifies
-                 * @readonly
-                 */
-                scroller: {
-                    notify: true,
-                    observer: '_scrollerChanged',
-                    readOnly: true,
-                    type: Object,
-                    value: null
+                    value: 2
                 }
             },
 
             /*********************************************************************/
 
-            // COMPUTER
-            _computeZ: function (raised) {
-                return raised ? 2 : 0;
-            },
-
-            /*********************************************************************/
-
             // OBSERVER
-            _scrollerChanged: function (post, pre) {
+            _groupChanged: function () {
+
+                // Vars
+                var self = this;
 
                 // Checking
-                if (arguments.length < 2) { return; }
+                if (!self.isAttached) { return; }
 
-                // Listening
-                if (pre) { XP.removeAttribute(pre, 'scroller'); }
-                if (post) { XP.addAttribute(post, 'scroller'); }
+                // Collapsing
+                if (!self.collapsed && !self.group.autoCollapseDisabled) { XP.invoke(XP.findSiblingElements(self, '.panel'), 'collapse'); }
             },
 
             /*********************************************************************/
 
             // LISTENER
+            created: function () {
+
+                // Classifying
+                this.classList.add('panel');
+            },
+
+            // LISTENER
             ready: function() {
-                this._setScroller(this.$.matPanelScroller);
+
+                // Mapping
+                this.mastersMap.group = '.panels';
             },
 
             /*********************************************************************/
 
             // HANDLER
-            _handleScroll: function () {
-                this._setScrolled(this.scroller.scrollTop);
-            },
-
-            // HANDLER
             _handleSlave: function (event) {
-                if (event.detail.firer !== this && event.detail.selector === 'mat-panel-group' && XP.matches(event.detail.firer, 'mat-panel')) { event.stopPropagation(); }
+
+                // Vars
+                var self     = this,
+                    firer    = event.detail.firer,
+                    selector = event.detail.selector;
+
+                // Stopping
+                if (firer !== self && selector === '.panels' && firer.classList.contains('panel')) { event.stopPropagation(); }
             }
         });
     </script>
