--- a/mat-panel.html
+++ b/mat-panel.html
@@ -59,7 +59,7 @@ The panel's background color can be changed accordingly to the
 @dependency expandjs ExpandJS/expandjs#0.10.0
 @dependency mat-paper ExpandJS/mat-paper#0.10.0
 @dependency mat-spacing ExpandJS/mat-spacing#0.10.0
-@dependency xp-collapse ExpandJS/xp-collapse#0.10.0
+@dependency xp-collapse-behavior ExpandJS/xp-collapse-behavior#0.10.0
 @dependency xp-slave-behavior ExpandJS/xp-slave-behavior#0.10.0
 -->
 
